--- a/20200507_RepTrak.Rmd
+++ b/20200507_RepTrak.Rmd
@@ -26,26 +26,29 @@ This dashboard shows reputation scores in line with what The Reputation Institur
   
    **Drivers ING vs competition**
    
-```{r quickAUS, echo=FALSE, echo=F, eval=T, fig.width=6.3, fig.align='left', fig.height=3}
+```{r quickAUS, echo=FALSE, echo=F, eval=T, fig.width=5.8, fig.align='left', fig.height=4.0}
 quickfact <- test %>%
   dplyr::select(label, country, quarter_measurement, labels_quarters, pulse, rep_trak1, rep_trak2, rep_trak3, rep_trak4,
                 rep_trak5, rep_trak6, rep_trak7, rep_trak8, rep_trak9, rep_trak10, rep_trak11, b_value) %>%
   dplyr::filter(country==1 & quarter_measurement==21 & b_value<6) %>%
   dplyr::mutate(
     pulse = round(pulse, digits=2),
-    rep_trak5 = round(rep_trak5, digits=2),
-    rep_trak6 = round(rep_trak6, digits=2),
-    rep_trak7 = round(rep_trak7, digits=2),
-    rep_trak8 = round(rep_trak8, digits=2),
-    rep_trak9 = round(rep_trak9, digits=2),
-    rep_trak10 = round(rep_trak10, digits=2),
-    rep_trak11 = round(rep_trak11, digits=2),
+    products  = round(rep_trak5, digits=2),
+    innovation = round(rep_trak6, digits=2),
+    workplace = round(rep_trak7, digits=2),
+    governance = round(rep_trak8, digits=2),
+    citizenship = round(rep_trak9, digits=2),
+    leadership = round(rep_trak10, digits=2),
+    performance = round(rep_trak11, digits=2),
   )
 
+quickfact <- quickfact[,-c(6:16)]
+
+# transform quickfact to create the plot
 quickfactt <- as.data.frame(t(quickfact))
 row.names(quickfactt) <- NULL
 colnames(quickfactt) = as.character(unlist(quickfactt[1,]))
-quickfactt <- quickfactt[-c(1:9, 17),]
+quickfactt <- quickfactt[-c(1:6),]
 
 quickfactt$ING <- as.numeric(as.character(quickfactt$ING))
 quickfactt$ANZ <- as.numeric(as.character(quickfactt$ANZ))
@@ -55,46 +58,111 @@ quickfactt$Westpac <- as.numeric(as.character(quickfactt$Westpac))
 
 quickfactt$Drivers <- c("Products", "Innovation", "Workplace", "Governance", "Citizenship", "Leadership", "Performance")
 
-p <- plot_ly(
-  type = 'table',
-  columnwidth = c(50, 45, 45, 45, 45, 45),
-  columnorder = c(0, 1, 2, 3, 4, 5),
-  header = list(
-    values = c("<b>Drivers<b>", "<b>ING<b>", "<b>ANZ<b>", "<b>NAB<b>","<b>Commonwealth<b>", "<b>Westpac<b>"),
-    align = c("left", "right", "right", "right", "right", "right"),
-    line = list(width = 1, color = c("rgb 168, 168, 168")),
-    fill = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)",
-                          "rgb(255,098,000)")),
-    font = list(family = "ING me", size = 12, color = "white")
-  ),
-  cells = list(
-    values = rbind(quickfactt$Drivers, quickfactt$ING, quickfactt$ANZ, quickfactt$NAB, 
-                   quickfactt$Commonwealth, quickfactt$Westpac),
-    align = c("left", "right", "right", "right", "right", "right"),
-    line = list(color = c("rgb 168, 168, 168"), width = 1),
-    font = list(family = "ING me", size = 12, color = c("rgb 105, 105, 105"))
-  ))
-p
+xaxis <- list(title = "",
+              showline = TRUE,
+              showgrid = FALSE,
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = FALSE,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 2,
+              #ticklen = 5,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+
+yaxis <- list(title = "",
+              titlefont = list(family = "ING me",
+                               size = 12,
+                               color = 'rgb(105, 105, 105)'),
+              showline = TRUE,
+              showgrid = FALSE,
+              range =c(0,100),
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = TRUE,
+              #dtick = 50.000,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 1,
+              #ticklen = 1,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+
+
+p1 <- plot_ly(x = quickfactt$Drivers, y=~quickfactt$ING, 
+               name ='ING', type='bar', marker = list(color = 'rgb(255,098,000)', width = 4)) %>%
+  add_trace(y = ~quickfactt$ANZ, 
+            name = 'ANZ', marker = list(color = 'rgb(96,166,218)', width = 4)) %>%
+  add_trace(y = ~quickfactt$Commonwealth, 
+            name = 'Commonwealth', marker = list(color = 'rgb(171,0,102)', width = 4)) %>%
+  add_trace(y = ~quickfactt$NAB, 
+            name = 'NAB', marker = list(color = 'rgb(208,217,60)', width = 4)) %>%
+  add_trace(y = ~quickfactt$Westpac, 
+            name = 'Westpac', marker = list(color = 'rgb(52,150,81)', width = 4)) %>%
+  layout(xaxis = xaxis,
+         yaxis = yaxis,
+         barmode = 'group', title= "",
+         legend =list(font = list(family = "ING me", size = 12, color = 'rgb(105, 105, 105)')))
+p1
+
+
+#quickfactt <- as.data.frame(t(quickfact))
+#row.names(quickfactt) <- NULL
+#colnames(quickfactt) = as.character(unlist(quickfactt[1,]))
+#quickfactt <- quickfactt[-c(1:9, 17),]
+
+#quickfactt$ING <- as.numeric(as.character(quickfactt$ING))
+#quickfactt$ANZ <- as.numeric(as.character(quickfactt$ANZ))
+#quickfactt$Commonwealth <- as.numeric(as.character(quickfactt$Commonwealth))
+#quickfactt$NAB <- as.numeric(as.character(quickfactt$NAB))
+#quickfactt$Westpac <- as.numeric(as.character(quickfactt$Westpac))
+
+#quickfactt$Drivers <- c("Products", "Innovation", "Workplace", "Governance", "Citizenship", "Leadership", "Performance")
+
+#p <- plot_ly(
+#  type = 'table',
+#  columnwidth = c(50, 45, 45, 45, 45, 45),
+#  columnorder = c(0, 1, 2, 3, 4, 5),
+#  header = list(
+#    values = c("<b>Drivers<b>", "<b>ING<b>", "<b>ANZ<b>", "<b>NAB<b>","<b>Commonwealth<b>", "<b>Westpac<b>"),
+#    align = c("left", "right", "right", "right", "right", "right"),
+#    line = list(width = 1, color = c("rgb 168, 168, 168")),
+#    fill = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)",
+#                          "rgb(255,098,000)")),
+#    font = list(family = "ING me", size = 12, color = "white")
+#  ),
+#  cells = list(
+#    values = rbind(quickfactt$Drivers, quickfactt$ING, quickfactt$ANZ, quickfactt$NAB, 
+#                   quickfactt$Commonwealth, quickfactt$Westpac),
+#    align = c("left", "right", "right", "right", "right", "right"),
+#    line = list(color = c("rgb 168, 168, 168"), width = 1),
+#    font = list(family = "ING me", size = 12, color = c("rgb 105, 105, 105"))
+#  ))
 ```
  </div>
   <div class="col-md-6" markdown="1">
 
    **Pulse over time**
  
-```{r pulse AUS, echo=FALSE, echo=F, eval=T, fig.width=5.2, fig.height=3.5, fig.align='left'}
+```{r pulse AUS, echo=FALSE, echo=F, eval=T, fig.width=5.5, fig.height=4, fig.align='left'}
 quickfact <- test %>%
   dplyr::select(label, country, quarter_measurement, labels_quarters, pulse, rep_trak1, rep_trak2, rep_trak3, rep_trak4,
                 rep_trak5, rep_trak6, rep_trak7, rep_trak8, rep_trak9, rep_trak10, rep_trak11, b_value) %>%
-  dplyr::filter(country==1 & quarter_measurement>17 & b_value<6) %>%
+  dplyr::filter(country==1 & quarter_measurement>16 & b_value<6) %>%
   dplyr::mutate(
     pulse = round(pulse, digits=2),
-    rep_trak5 = round(rep_trak5, digits=2),
-    rep_trak6 = round(rep_trak6, digits=2),
-    rep_trak7 = round(rep_trak7, digits=2),
-    rep_trak8 = round(rep_trak8, digits=2),
-    rep_trak9 = round(rep_trak9, digits=2),
-    rep_trak10 = round(rep_trak10, digits=2),
-    rep_trak11 = round(rep_trak11, digits=2),
+    products  = round(rep_trak5, digits=2),
+    innovation = round(rep_trak6, digits=2),
+    workplace = round(rep_trak7, digits=2),
+    governance = round(rep_trak8, digits=2),
+    citizenship = round(rep_trak9, digits=2),
+    leadership = round(rep_trak10, digits=2),
+    performance = round(rep_trak11, digits=2),
   )
 xaxis <- list(title = "",
               showline = TRUE,
@@ -130,7 +198,7 @@ yaxis <- list(title = "",
                               size = 12,
                               color = 'rgb(105, 105, 105)'))
 
-p1 <- plot_ly(x = quickfact$labels_quarters[quickfact$label=="ING"]) %>%
+p1 <- plot_ly(x = unique(quickfact$labels_quarters)) %>%
   add_lines(y = ~quickfact$pulse[quickfact$label=="ING"], name = 'ING', type='scatter', 
             line = list(color = 'rgb(255,098,000)', type='scatter', width = 4, mode = 'lines+markers')) %>%
   add_lines(y = ~quickfact$pulse[quickfact$label=="ANZ"], name = 'ANZ', type='scatter', 
@@ -147,6 +215,7 @@ p1 <- plot_ly(x = quickfact$labels_quarters[quickfact$label=="ING"]) %>%
          legend =list(font = list(family = "ING me", size = 12, color = 'rgb(105, 105, 105)')))
 
 p1
+
 ```
 
  </div> <div class="row">  
@@ -157,8 +226,8 @@ p1
 <div class="row">
   <div class="col-md-6" markdown="1">
 
-   **Drivers ING clients vs non clients**
-```{r split1AUS, echo=FALSE, echo=F, eval=T, fig.width=6.3, fig.align='left', fig.height=3}
+   **Drivers **
+```{r split1AUS, echo=FALSE, echo=F, eval=T, fig.width=5.8, fig.align='left', fig.height=4}
 split <- data1 %>%
   dplyr::select(label, country, quarter_measurement, labels_quarters, rep_trak1, rep_trak2, rep_trak3, rep_trak4, pulse, 
   rep_trak5, rep_trak6, rep_trak7, rep_trak8, rep_trak9, rep_trak10, rep_trak11, reptrak1_client, reptrak2_client,
@@ -242,33 +311,26 @@ split$drivers <- NULL
 split <- split %>%
   dplyr::select(drivers, general_pop, clients, non_clients)
 
-p <- plot_ly(
-  type = 'table',
-  columnwidth = c(50, 45, 45, 45),
-  columnorder = c(0, 1, 2, 3),
-  header = list(
-    values = c("<b>Drivers<b>", "<b>general pop<b>", "<b>clients<b>", "<b>non clients<b>"),
-    align = c("left", "right", "right", "right", "right"),
-    line = list(width = 1, color = c("rgb 168, 168, 168")),
-    fill = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)")),
-    font = list(family = "ING me", size = 14, color = "white")
-  ),
-  cells = list(
-    values = rbind(split$drivers, split$general_pop, split$clients, split$non_clients),
-    align = c("left", "right", "right", "right"),
-    line = list(color = c("rgb 168, 168, 168"), width = 1),
-    font = list(family = "ING me", size = 12, color = c("rgb 105, 105, 105"))
-  ))
-p
-```
+split <- split[-1,]
 
- </div>
-  <div class="col-md-6" markdown="1">
-
-   **ING clients vs non clients**
- 
-```{r split AUS, echo=FALSE, echo=F, eval=T, fig.width=5.2, fig.height=3.5, fig.align='left'}
-
+#p <- plot_ly(
+#  type = 'table',
+#  columnwidth = c(50, 45, 45, 45),
+#  columnorder = c(0, 1, 2, 3),
+#  header = list(
+#    values = c("<b>Drivers<b>", "<b>general pop<b>", "<b>clients<b>", "<b>non clients<b>"),
+#    align = c("left", "right", "right", "right", "right"),
+#    line = list(width = 1, color = c("rgb 168, 168, 168")),
+#    fill = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)")),
+#    font = list(family = "ING me", size = 14, color = "white")
+#  ),
+#  cells = list(
+#    values = rbind(split$drivers, split$general_pop, split$clients, split$non_clients),
+#   align = c("left", "right", "right", "right"),
+#    line = list(color = c("rgb 168, 168, 168"), width = 1),
+#    font = list(family = "ING me", size = 12, color = c("rgb 105, 105, 105"))
+#  ))
+#p
 xaxis <- list(title = "",
               showline = TRUE,
               showgrid = FALSE,
@@ -303,7 +365,6 @@ yaxis <- list(title = "",
                               size = 12,
                               color = 'rgb(105, 105, 105)'))
 
-
 p1 <- plot_ly(x = split$drivers, y=~split$clients, 
                name ='clients', type='bar', marker = list(color = 'rgb(255,098,000)', width = 4)) %>%
   add_trace(y = ~split$general_pop, 
@@ -315,37 +376,32 @@ p1 <- plot_ly(x = split$drivers, y=~split$clients,
          barmode = 'group', title= "",
          legend =list(font = list(family = "ING me", size = 12, color = 'rgb(105, 105, 105)')))
 p1
-
 ```
- </div> <div class="row">  
-</div>
 
-
-### **Reputation and other brand metrics**
-
-<div class="row">
+ </div>
   <div class="col-md-6" markdown="1">
 
-   **Trust, Love, Pulse**
-```{r trendbrandAUS, echo=FALSE, echo=F, eval=T, fig.width=5.2, fig.align='left', fig.height=3.5 }
-trendbrand <- test %>%
-  dplyr::select(b_value, label, quarter_measurement, country, labels_quarters, labels_countries, trust4, desirability,
-                easy_mean, meets_needs_mean, smart_mean, digital_experience, pulse, love_mean_ING, price_mean) %>%
-  dplyr::filter(country==1 & quarter_measurement>17 & b_value==1) %>%
+   **Pulse over time**
+ 
+```{r split AUS, echo=FALSE, echo=F, eval=T, fig.width=5.2, fig.height=3.5, fig.align='left'}
+
+split <- test %>%
+  dplyr::select(label, country, quarter_measurement, labels_quarters, pulse, 
+  pulse_clients, pulse_non_clients, b_value) %>%
+  dplyr::filter(country==1 & quarter_measurement>16 & b_value==1) %>%
   dplyr::mutate(
-    trust = trust4 *100,
-    love = love_mean_ING * 10
+    pulse = round(pulse, digits=2),
+    pulse_clients = round(pulse_clients, digits=2),
+    pulse_non_clients = round(pulse_non_clients, digits=2),
   )
 
-p1 <- plot_ly(x = trendbrand$labels_quarters) %>%
-  add_lines(y = ~trendbrand$pulse, name = 'pulse', type='scatter', 
+p1 <- plot_ly(x = ~split$labels_quarters) %>%
+  add_lines(y = ~split$pulse, name = 'population', type='scatter', 
             line = list(color = 'rgb(255,098,000)', type='scatter', width = 4, mode = 'lines+markers')) %>%
-  #add_lines(y = ~trendbrand$desirability, name = 'desirability', type='scatter', 
-  #          line = list(color = 'rgb(96,166,218)', type='scatter', width = 4, mode = 'lines+markers')) %>%
-  add_lines(y = ~trendbrand$trust, name = 'trust', type='scatter', 
+  add_lines(y = ~split$pulse_clients, name = 'clients', type='scatter', 
+            line = list(color = 'rgb(96,166,218)', type='scatter', width = 4, mode = 'lines+markers')) %>%
+  add_lines(y = ~split$pulse_non_clients, name = 'non clients', type='scatter', 
             line = list(color = 'rgb(171,0,102)', type='scatter', width = 4, mode = 'lines+markers')) %>%
-  add_lines(y = ~trendbrand$love, name = 'love', type='scatter', 
-            line = list(color = 'rgb(208,217,60)', type='scatter', width = 4, mode = 'lines+markers')) %>%
   layout(xaxis = xaxis,
          yaxis = yaxis,
          barmode = 'group', title= "",
@@ -354,36 +410,8 @@ p1 <- plot_ly(x = trendbrand$labels_quarters) %>%
 p1
 
 
-```
-
- </div>
-  <div class="col-md-6" markdown="1">
-
-   **Pulse and Trust**
- 
-```{r trendbrand2AUS, echo=FALSE, echo=F, eval=T, fig.width=5.2, fig.height=3.5, fig.align='left', warning=F}
-
-trendbrand <- test %>%
-  dplyr::select(b_value, label, quarter_measurement, country, labels_quarters, labels_countries, trust4, desirability,
-                easy_mean, meets_needs_mean, smart_mean, digital_experience, pulse, love_mean_ING, price_mean) %>%
-  dplyr::filter(country==1 & quarter_measurement==21 & b_value <6) %>%
-  dplyr::mutate(
-    trust = trust4 *100,
-    love = love_mean_ING * 10
-  )
-
-trendbrandp <- trendbrand %>%
-  plot_ly(x = ~trust, y = ~pulse, type = 'scatter', color ='rgb(255,098,000)',
-           mode = 'text+markers', text = ~label, textposition = 'middle right',
-           textfont = list(family = "ING me", color = 'rgb(105, 105, 105)', size = 11)) %>%
-  layout(title = '',
-         xaxis = xaxis,
-         yaxis = yaxis)
-trendbrandp
-
 
 ```
-
  </div> <div class="row">  
 </div>
 
@@ -393,9 +421,9 @@ trendbrandp
   <div class="col-md-6" markdown="1">
   
   
-   **Correlations**
+   **Correlations with pulse ING**
    
-```{r CORAUS, echo=FALSE, echo=F, eval=T, fig.width=6.3, fig.align='left', fig.height=3}
+```{r CORAUS, echo=FALSE, echo=F, eval=T, fig.width=5.5, fig.align='left', fig.height=4, warning=F, message=F}
 
 trial <- result %>%
   dplyr::select(country, quarter_measurement, weight, b_value, Love_ING, desirability_value, price_perception_value,
@@ -403,35 +431,39 @@ trial <- result %>%
                 reptrak5_value, reptrak6_value, reptrak7_value, reptrak8_value, reptrak9_value, reptrak10_value,
                 reptrak11_value) %>%
   dplyr::filter(quarter_measurement == max(quarter_measurement)) %>%
-  dplyr::filter(country==1 & b_value<6 & !is.na(reptrak1_value) & !is.na(reptrak11_value) & !is.na(desirability_value)) %>%
+  dplyr::filter(country==1 & b_value==1 & !is.na(reptrak1_value)) %>%
   dplyr::mutate(
    reptrak1 = (reptrak1_value * weight)/7 *100,
    reptrak2 = (reptrak2_value * weight)/7 *100,
    reptrak3 = (reptrak3_value * weight)/7 *100,
    reptrak4 = (reptrak4_value * weight)/7 *100,
-   reptrak5 = (reptrak5_value * weight)/7 *100,
-   reptrak6 = (reptrak6_value * weight)/7 *100,
-   reptrak7 = (reptrak7_value * weight)/7 *100,
-   reptrak8 = (reptrak8_value * weight)/7 *100,
-   reptrak9 = (reptrak9_value * weight)/7 *100,
-   reptrak10 = (reptrak10_value * weight)/7 *100,
-   reptrak11 = (reptrak11_value * weight)/7 *100
+   products = (reptrak5_value * weight)/7 *100,
+   innovation = (reptrak6_value * weight)/7 *100,
+   workplace = (reptrak7_value * weight)/7 *100,
+   governance = (reptrak8_value * weight)/7 *100,
+   citizenship = (reptrak9_value * weight)/7 *100,
+   leadership = (reptrak10_value * weight)/7 *100,
+   performance = (reptrak11_value * weight)/7 *100
   ) %>%
-  dplyr::select(reptrak1, reptrak2, reptrak3, reptrak4, reptrak5, reptrak6, reptrak7, reptrak8, reptrak9,
-                reptrak10, reptrak11, Love_ING, desirability_value, price_perception_value, easy_value, smart_value,
-                meets_needs_value) %>%
+  dplyr::select(country, quarter_measurement, weight, b_value, reptrak1, reptrak2, reptrak3, reptrak4, products, innovation,
+                workplace, governance, citizenship, leadership, performance, Love_ING, desirability_value,
+                price_perception_value, easy_value, smart_value, meets_needs_value) %>%
   dplyr::mutate(
-    pulse = reptrak1 + reptrak2 + reptrak3 + reptrak4
-  ) %>%
-   dplyr::select(pulse, reptrak5, reptrak6, reptrak7, reptrak8, reptrak9, reptrak10, reptrak11, Love_ING, 
-                 desirability_value, price_perception_value, easy_value, smart_value, meets_needs_value)
+    pulse = (reptrak1 + reptrak2 + reptrak3 + reptrak4)/4
+  )
 
-trialcor <- trial %>%
+trial1 <- trial %>%
+  dplyr::select(pulse, products, innovation,
+                workplace, governance, citizenship, leadership, performance, Love_ING, desirability_value,
+                price_perception_value, easy_value, smart_value, meets_needs_value)
+
+trialcor <- trial1 %>%
   correlate() %>% 
   fashion() %>%
   dplyr::select(rowname, pulse) 
   trialcor$drivers <-trialcor$rowname
   trialcor$rowname <- NULL
+  trialcor <- trialcor[-1,]
 
 p2 <- plot_ly(
   type = 'table',
@@ -456,11 +488,193 @@ p2
  </div>
   <div class="col-md-6" markdown="1">
 
-   **Pulse over time**
+   **Density plot pulse ING**
  
-```{r pulse AUS, echo=FALSE, echo=F, eval=T, fig.width=5.2, fig.height=3.5, fig.align='left'}
+```{r den AUS, echo=FALSE, echo=F, eval=T, fig.width=5.2, fig.height=3.5, fig.align='left', warning=F}
+
+den_AUS <-density(trial$pulse[trial$b_value==1], na.rm=T)
+xaxis <- list(title = "pulse", 
+              titlefont = list(color = 'rgb(105, 105, 105)', size = 12, family = "ING me"),
+              range =c(0,155),
+              #dtick = 10,
+              #showline = TRUE,
+              #showgrid = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+yaxis <- list(title = "Density",
+              titlefont = list(color = 'rgb(105, 105, 105)', size = 12, family = "ING me"),
+              #range =c(0,150),
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = TRUE,
+              #dtick = 5,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 1,
+              #ticklen = 1,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+figAUS <- plot_ly(
+  x = ~den_AUS$x, y = ~den_AUS$y, type = 'scatter', mode = 'lines', fill = 'tozeroy',
+  color ='rgb(255,098,000)') %>% layout(xaxis = xaxis,                                                                                yaxis = yaxis)
+figAUS
 
 ```
 
  </div> <div class="row">  
 </div>
+
+
+### **Reputation model and conclusions **
+  
+<div class="row">
+  <div class="col-md-6" markdown="1">
+  
+  
+   **Model results  with pulse ING**
+   
+```{r MODAUS, echo=FALSE, echo=F, eval=T, fig.width=5.5, fig.align='left', fig.height=4, warning=F, message=F}
+trial <- result %>%
+  dplyr::select(country, quarter_measurement, weight, b_value, Love_ING, desirability_value, price_perception_value,
+                easy_value, smart_value, meets_needs_value, reptrak1_value, reptrak2_value, reptrak3_value, reptrak4_value,
+                reptrak5_value, reptrak6_value, reptrak7_value, reptrak8_value, reptrak9_value, reptrak10_value,
+                reptrak11_value) %>%
+  dplyr::filter(quarter_measurement == max(quarter_measurement)) %>%
+  dplyr::filter(country==1 & b_value==1 & !is.na(reptrak1_value)) %>%
+  dplyr::mutate(
+   reptrak1 = (reptrak1_value * weight)/7 *100,
+   reptrak2 = (reptrak2_value * weight)/7 *100,
+   reptrak3 = (reptrak3_value * weight)/7 *100,
+   reptrak4 = (reptrak4_value * weight)/7 *100,
+   products = (reptrak5_value * weight)/7 *100,
+   innovation = (reptrak6_value * weight)/7 *100,
+   workplace = (reptrak7_value * weight)/7 *100,
+   governance = (reptrak8_value * weight)/7 *100,
+   citizenship = (reptrak9_value * weight)/7 *100,
+   leadership = (reptrak10_value * weight)/7 *100,
+   performance = (reptrak11_value * weight)/7 *100
+  ) %>%
+  dplyr::select(country, quarter_measurement, weight, b_value, reptrak1, reptrak2, reptrak3, reptrak4, products, innovation,
+                workplace, governance, citizenship, leadership, performance, Love_ING, desirability_value,
+                price_perception_value, easy_value, smart_value, meets_needs_value) %>%
+  dplyr::mutate(
+    pulse = (reptrak1 + reptrak2 + reptrak3 + reptrak4)/4
+  )
+
+trial <- trial %>%
+  dplyr::filter(!is.na(pulse), !is.na(products), !is.na(innovation), !is.na(workplace), !is.na(governance), !is.na(citizenship),
+                !is.na(leadership), !is.na(performance))
+  
+# Model prep-> split the dataset 
+set.seed(123)
+training.samples <- trial$pulse %>%
+  createDataPartition(p = 0.8, list = FALSE)
+train.data  <- trial[training.samples, ]
+test.data <- trial[-training.samples, ]
+
+#table(is.na(train.data$pulse))
+
+# Build the model
+model1 <- lm(pulse ~ products + innovation + workplace + governance + citizenship + leadership + performance, 
+             data = train.data)
+sum <- summary(model1)
+
+
+# Make predictions
+predictions <- model1 %>% 
+  predict.lm(test.data) 
+
+# Model performance
+model_performance <- data.frame(
+  RMSE = RMSE(predictions, test.data$pulse),
+  R2 = R2(predictions, test.data$pulse)
+)
+
+
+# running multi collinearity checks, above >8 remove from model
+mult <- car::vif(model1)
+
+# other option to check multu collinearity
+#imcdiag(x= trial[,9:21], y=trial$pulse)
+
+driv <-c("intercept", "products", "innovation", "workplace", "governance", "citizenship", "leadership", "performance")
+
+p2 <- plot_ly(
+  type = 'table',
+  columnwidth = c(50, 45, 45, 45, 45),
+  columnorder = c(0, 1, 2, 3, 4),
+  header = list(
+    values = c("<b>Drivers<b>", "<b>Estimate<b>", "<b>Std Error<b>", "<b>t value<b>", "<b>P<b>"),
+    align = c("left", "right", "right", "right", "right"),
+    line = list(width = 1, color = c("rgb 168, 168, 168")),
+    fill = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)" )),
+    font = list(family = "ING me", size = 14, color = "white")
+  ),
+  cells = list(
+    values = rbind(driv, round(sum$coefficients[,1], digits = 4), round(sum$coefficients[,2], digits=4),
+                   round(sum$coefficients[,3], digits=4), round(sum$coefficients[,4], digits=4)),
+    align = c("left", "right", "right", "right", "right"),
+    line = list(color = c("rgb 168, 168, 168"), width = 1),
+    font = list(family = "ING me", size = 12, color = c("rgb 105, 105, 105"))
+  ))
+p2
+
+
+
+
+fit <- lm(pulse ~ products , 
+             data = train.data)
+
+
+
+
+```
+ </div>
+  <div class="col-md-6" markdown="1">
+
+   **Plot model**
+ 
+```{r PL AUS, echo=FALSE, echo=F, eval=T, fig.width=5.0, fig.height=3.5, fig.align='left', warning=F}
+xaxis <- list(title = "", 
+              titlefont = list(color = 'rgb(105, 105, 105)', size = 12, family = "ING me"),
+              #range =c(0,155),
+              #dtick = 10,
+              #showline = TRUE,
+              #showgrid = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+yaxis <- list(title = "pulse",
+              titlefont = list(color = 'rgb(105, 105, 105)', size = 12, family = "ING me"),
+              #range =c(0,150),
+              showticklabels = TRUE,
+              linecolor = 'rgb(204, 204, 204)',
+              linewidth = 2,
+              autotick = TRUE,
+              #dtick = 5,
+              ticks = 'inside',
+              tickcolor = 'rgb(204, 204, 204)',
+              tickwidth = 1,
+              #ticklen = 1,
+              tickfont = list(family = "ING me",
+                              size = 12,
+                              color = 'rgb(105, 105, 105)'))
+plot <- train.data %>% 
+  plot_ly(x = ~products) %>% 
+  add_markers(y = ~pulse, type = 'scatter', mode = 'lines', color ='rgb(255,098,000)', name= 'actual pulse') %>% 
+  add_lines(x = ~products, y = fitted(fit), name= 'predicted') %>% 
+  layout(xaxis = xaxis, yaxis = yaxis,
+         legend =list(font = list(family = "ING me", size = 12, color = 'rgb(105, 105, 105)')))
+plot
+```
+
+ </div> <div class="row">  
+</div>
+
